@@ -1,7 +1,4 @@
-<<<<<<< master
-=======
 /* $Id$ */
->>>>>>> origin
 /*
   Copyright (C) 1999-2004 IC & S  dbmail@ic-s.nl
   Copyright (c) 2005-2006 NFG Net Facilities Group BV support@nfg.nl
