@@ -78,7 +78,6 @@
 #include "dsn.h"
 #include "acl.h"
 #include "misc.h"
-#include "main.h"
 #include "pipe.h"
 #include "db.h"
 #include "auth.h"
@@ -86,7 +85,6 @@
 #include "imap4.h"
 #include "imapcommands.h"
 #include "memblock.h"
-#include "pidfile.h"
 #include "forward.h"
 #include "dbmd5.h"
 #include "md5.h"
